test/data/resolver/valid/unlabelled_binding_target_inferred.cypher
MATCH (p:Person)-[r:AUTHORED]->(x) RETURN x, r
