test/data/resolver/invalid/empty_inline_endpoint.cypher
MATCH (p:Person)-[r:AUTHORED]->() RETURN r
